--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://tomarou-public-bucket.s3-website-ap-northeast-1.amazonaws.com/"
 theme = "hugo-theme-chunky-poster"
 title = "トマロウ"
 
